# warpax

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  Makefile  README.md  asv.conf.json  manim.cfg  mkdocs.yml  pyproject.toml  reproduce_all.sh  requirements-dev-lock.txt  requirements-lock.txt
.github/workflows/: ci.yml
benchmarks/: README.md  __init__.py  bench_auto_chunk.py  bench_classifier_grid.py  bench_curvature.py  bench_ec_four_way_alcubierre.py  bench_energy_conditions.py  bench_geodesic.py  bench_jit_cache.py  bench_precision_band.py
docs/: ARCHITECTURE.md  index.md
docs/explanation/: ARCHITECTURE.md  boundary_cost.md  release_notes.md  theory.md
docs/how-to/: custom_metric_tutorial.md  interpreting_ec_results.md  loading_external_metrics.md  reproduce_warpshell_paper.md
docs/reference/: api_defaults.md  benchmarks.md  index.md  metric_catalog.md
docs/stylesheets/: extra.css
docs/tutorials/: examples_tour.md  first_curvature_computation.md  quickstart.md
examples/: 01_minkowski_sanity.py  02_schwarzschild_verification.py  03_alcubierre_analysis.py  04_warp_drive_comparison.py  05_grid_analysis.py  06_geodesic_through_warp_bubble.py  07_custom_warp_metric.py  08_metric_design.py  09_admissibility_diagnostics.py  10_phase_diagram.py  README.md
results/: MANIFEST.txt  alcubierre_kinematic_vs0.5.npz  alignment_rodal.npz  c1_vs_c2_comparison.json  c1_vs_c2_comparison.tex  clustered_convergence_alcubierre.json  clustered_convergence_rodal_matched.json  comparison_table.json  constraint_residual_verification.json  construction_verification.json  convergence_data.json  curvature_scaling.json  exoticity_ranking.json  fibonacci_dec_comparison.json  fuchs_kernel_comparison.json  fuchs_verification_report.json  geodesic_alcubierre_blueshift_vs0.1.npz  geodesic_alcubierre_blueshift_vs0.5.npz  geodesic_alcubierre_blueshift_vs0.9.npz  geodesic_alcubierre_blueshift_vs0.99.npz  geodesic_alcubierre_tidal_vs0.1.npz  geodesic_alcubierre_tidal_vs0.5.npz  geodesic_alcubierre_tidal_vs0.9.npz  geodesic_alcubierre_tidal_vs0.99.npz  geodesic_scaling.json  invariant_verification.json  lentz_kinematic_vs0.5.npz  lentz_wall_assessment.json  lentz_wall_report.md  matched_benchmark.json  metric_metadata.json  missed_detection_comparison.json  natario_kinematic_vs0.5.npz  nstarts_ablation.json  proposals_verification_report.json  rodal_dec_diagnosis.json  rodal_kinematic_vs0.5.npz  rodal_matched_report.md  rodal_matched_resolution.json  rodal_native_resolution.json  (+18 more)
results/anec/: retained.json  retained_symplectic.json  source_first_impact_scan.json
results/phase_diagram/: sweep_results.json
results/phase_diagram_sshell/: sweep_results.json
results/quantum/: ford_roman.json
scripts/: README.md  _json_io.py  _paper_numbers_map.py  _radial_sweep.py  audit_paper_numbers.py  capture_goldens.py  constraint_residual_verification.py  derive_vorticity_type.py  dump_hlo_curvature.py  dump_hlo_curvature.sh  emit_diagnostic_tables.py  emit_paper_numbers.py  fuchs_kernel_comparison.py  generate_showcase.py  generate_vdb_comparison_figures.py  render_all_scenes.py  render_manim_scenes.sh  reproduce_figures.py  rodal_dec_ablation.py  run_analysis.py  run_anec_geodesic_check.py  run_anec_impact_scan.py  run_anec_profiles.py  run_anec_retained.py  run_anec_symplectic.py  run_c1_vs_c2_comparison.py  run_clustered_convergence.py  run_construction_verification.py  run_convergence.py  run_coordinate_invariance.py  run_criterion_e_verification.py  run_curvature_scaling.py  run_delta_tau_scan.py  run_error_budget.py  run_exoticity_ranking.py  run_fuchs_canonical.py  run_geodesics.py  run_invariant_verification.py  run_kinematic_scalars.py  run_landscape.py  (+34 more)
src/warpax/: __init__.py  _jit_cache.py  certify.py  exceptions.py
tests/: _golden_harness.py  _gpu_xfail_registry.py  conftest.py  test_adm.py  test_adm_constraints.py  test_adm_superluminal.py  test_admissibility_smoke.py  test_analysis.py  test_analysis_integration.py  test_anec.py  test_averaged_and_quantum.py  test_awec.py  test_beartype_optin.py  test_bobrick_martire.py  test_bondi.py  test_bug_hunt_regressions.py  test_classification.py  test_classifier_vacuum_class.py  test_constraints.py  test_construction_adapter.py  test_curvature_identities.py  test_curvature_scaling.py  test_darmois.py  test_design.py  test_design_constraints.py  test_design_objectives.py  test_design_optimization.py  test_ec_classification.py  test_ec_classification_mpmath.py  test_ec_invariants.py  test_ec_observer.py  test_ec_observer_and_solvers.py  test_ec_optimization.py  test_ec_verifier.py  test_edge_cases.py  test_exceptions.py  test_filtering.py  test_ford_roman.py  test_frame_free.py  test_fuchs.py  (+58 more)
tests/fixtures/: e2_optimal_parameters_v1_1_0.npy  v1_api_defaults_v1_0.json  (+2 more)
(+188 files in other folders)
